# python-gardenlinux-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: e2e_test.yml
src/: crypto.py  glcli.py  oci.py  parse_features.py  registry.py  schemas.py
src/python_gardenlinux_cli/: apt.py  cli.py  glcli.py  oci.py  registry.py
src/python_gardenlinux_cli/commands/: apt.py  oci.py  registry.py
tests/: conftest.py  helper.py  test_e2e.py  test_push_image.py  test_push_manifest.py  test_update_index.py
tests/cert/: gencert.sh
tests/data/: build-test-data.sh
tests/zot/: config.json
zot/: config.json
