[tool.poetry]
name = "python-gardenlinux-cli"
version = "0.2.6"
description = ""
authors = ["Vincent Riesop <v.riesop@sap.com>"]
readme = "README.md"
packages = [
     { include = "python_gardenlinux_cli", from = "src" },
]
[tool.poetry.scripts]
glcli = "python_gardenlinux_cli.glcli:glcli"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
norecursedirs = "test-data"

[tool.poetry.dependencies]
python = "^3.12"
oras = { git  = "https://github.com/oras-project/oras-py.git", rev="caf8db5b279382335fbb1f6d7402ed9b73618d37" }
pytest = "^8.3.2"
click = "^8.1.7"
python-dotenv = "^1.0.1"
cryptography = "^43.0.0"
networkx = "^3.3"
PyYAML = "^6.0.2"
gitpython = "^3.1.43"
apt-repo = "^0.5"
sphinx-rtd-theme = "^2.0.0"
jsonschema = "^4.23.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
